apex/jwt_auth/force-app/main/default/objects/KountAuthConfig__c.object
<CustomObject>
    <label>Kount Auth Config</label>
    <pluralLabel>Kount Auth Configs</pluralLabel>
    <description>Stores Kount JWT tokens and expiration epoch</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>Text</type>
        <label>Name</label>
    </nameField>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>Access Token</label>
        <type>LongTextArea</type>
        <length>131072</length>
    </fields>
    <fields>
        <fullName>ApiKey__c</fullName>
        <label>API Key</label>
        <type>LongTextArea</type>
        <length>131072</length>
    </fields>
    <fields>
        <fullName>ExpirationEpoch__c</fullName>
        <label>Expiration Epoch</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>0</scale>
    </fields>
</CustomObject>